<resources>
    <string name="app_name">Life Universe Everything</string>
    <string name="life_universe_everything">Life, Universe, Everything</string>
    <string name="startbut">Start!!</string>
    <string name="title_activity_everything_list">EverythingListActivity</string>
    <string name="alphaba">ABC</string>
    <string name="categorize">Category</string>
    <string name="ratinga">Rating</string>
    <string name="rating"> Rating: </string>
    <string name="search">Search</string>
    <string name="search_hint">Search the Name</string>
    <string name="search_settings">Search Settings:</string>
    <string name="tags">Tags</string>
    <string name="categorysearch">Category</string>
    <string name="everythingsearch">Everything</string>
    <string name="set_the_search_setting">Set the Search Setting</string>
    <string name="insert_name_here">Insert Name Here!!</string>
    <string name="press_to_insert_image">Press to insert image!</string>
    <string name="nametextadd">Name:</string>
    <string name="categorynameadd">Category:</string>
    <string name="tagsnameadd">Tags:</string>
    <string name="commahint">Put Tags Here, Separated by Commas!!</string>
    <string name="reviewnameadd">Review:</string>
    <string name="reviewhint">Type your review of this thing here!!</string>
    <string name="bigassdd">ADD</string>
    <string name="imageaddtitle">Please Insert Image URL</string>
    <string name="positivebutton">Insert</string>
    <string name="negativebutton">Cancel</string>
</resources>
